FIX chat (server) severity on msg population closes noumenae/server#30 CHG remove 'PLUS' message type CHG all socket events updated to reflect server CHG server ping set to 150 seconds FIX page errors had wrong font

--- a/au/src/style_utilities/partials/_errors.sass
+++ b/au/src/style_utilities/partials/_errors.sass
@@ -5,7 +5,7 @@
   h1,
   h2
     margin-top: 100px
-    font-family: 'Verdana'
+    font-family: 'Comfortaa'
     font-variant: small-caps
     letter-spacing: 2px
     word-spacing: 2px
